--- a/homepage.html
+++ b/homepage.html
@@ -10,22 +10,24 @@
 </head>
 <body class="container">
     <div class="logo">
-        <h1>Rescue 22</h1>
+        <h6>R22</h6>
+        <h1 class="name">Rescue 22</h1>
     </div>
     <div class="header">
         <h2>Welcome!</h2>
-        <a href="">Home</a>
-        <a href="">Store</a>
-        <a href="">Contact Us</a>
-        <a href="">About Us</a>
+        <a href="#">Home</a>
+        <a href="#">Store</a>
+        <a href="#">Contact Us</a>
+        <a href="#">About Us</a>
     </div>
     <div class="mainContent"></div>
     <div class="article">
         <h3>Our Mission</h3>
         <p>At Rescue 22 our mission is to serve those who served us. On average, 22 veterans commit suicide
             a day and while that is a lot, even one suicide is too many. Anything our consumers buy here helps 
-            toward our mission because we put 10% of what you spend into rescuing a dog, having that dog trained,
+            toward our mission. When you make a purchase we at Rescue 22 put 10% of what you spend into rescuing a dog, having that dog trained,
             certified as a service dog, and given to a veteran in need.</p>
+        <img src="images/dogAndMarine.jpg" class="image">
     </div>
     <div class="footer"></div>    
 </body>
