--- a/homepage.html
+++ b/homepage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,27 +9,70 @@
     <link rel="stylesheet" type="text/css" href="homepage.css">
     <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
 </head>
-<body class="container">
+
+<body class="container backG">
     <div class="logo">
-        <h6>R22</h6>
         <h1 class="name">Rescue 22</h1>
     </div>
     <div class="header">
-        <h2>Welcome!</h2>
-        <a href="#">Home</a>
-        <a href="#">Store</a>
-        <a href="#">Contact Us</a>
-        <a href="#">About Us</a>
+        <h2 class="block">Welcome!</h2>
+        <div class="navBlock">
+            <a class="navA navRight" href="#">Home</a>
+            <a class="navA navRight" href="#">Store</a>
+            <a class="navA navRight" href="#">Contact Us</a>
+            <a class="navA" href="#">About Us</a>
+        </div>
     </div>
-    <div class="mainContent"></div>
+    <div class="saleAlert">
+        <h4 class="laborDay">LABOR DAY SALE!!</h4>
+    </div>
+
+    <div class="mainContent">
+        <div class="shop">
+            <div class="panel">
+                <img src="images/knife1.jpg" class='panelImg'>
+                <figcaption>MTech Tactical Knife</figcaption>
+                <p>The MTech tactical knife is perfect for those who love the outdoors and need a 
+                    durable knife to use for cutting!</p>
+                    <button>Add to Cart</button>
+            </div>
+            <div class="panel">
+                <img src="images/eoTech.jpg" class="panelImg">
+                <figcaption>EO Tech Hybrid Scope</figcaption>
+                <p>This EO Tech Hybrid Scope is perfect for those that want the option of close
+                    range shooting and long range shooting! </p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="panel">
+                <img src="images/collar.jpg" class="panelImg">
+                <figcaption>Camoflauge Paracord Dog Collar <br>w/ matching Bracelet</figcaption>
+                <p>Grab one of these fantastic paracord dog collars and get a matching bracelet
+                    for you to wear as well!</p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="panel2">
+                <img src="images/tacKit.jpg" class="panelImg">
+                <figcaption>CRKT Tactical Kit</figcaption>
+                <p>Grab this special labor day only tactical kit that comes with a soft duffle bag!</p>
+            <button>Add to Cart</button>
+            </div>
+        </div>
+    </div>
     <div class="article">
         <h3>Our Mission</h3>
-        <p>At Rescue 22 our mission is to serve those who served us. On average, 22 veterans commit suicide
-            a day and while that is a lot, even one suicide is too many. Anything our consumers buy here helps 
-            toward our mission. When you make a purchase we at Rescue 22 put 10% of what you spend into rescuing a dog, having that dog trained,
-            certified as a service dog, and given to a veteran in need.</p>
+        <p>At Rescue 22 our mission is to serve those who served us. On average, 22 veterans commit suicide a day and while
+            that is a lot, even one suicide is too many. Anything our consumers buy here helps toward our mission. When you
+            make a purchase we at Rescue 22 put 10% of what you spend into rescuing a dog, having that dog trained, certified
+            as a service dog, and given to a veteran in need.</p>
         <img src="images/dogAndMarine.jpg" class="image">
     </div>
-    <div class="footer"></div>    
+    <div class="footer">
+        <p class="botFoot navRight">&copy2018</p>
+        <a class="botA navRight" href="#">Sitemap</a>
+        <a class="botA navRight" href="#">Privacy Policy</a>
+        <a class="botA navRight" href="#">Terms of Use</a>
+        <p class="botFoot">Website by Drew</p>
+    </div>
 </body>
+
 </html>
