--- a/homepage.html
+++ b/homepage.html
@@ -8,11 +8,26 @@
     <title>Rescue 22 Home</title>
     <link rel="stylesheet" type="text/css" href="homepage.css">
     <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" 
+    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 
 <body class="container backG">
     <div class="logo">
         <h1 class="name">Rescue 22</h1>
+        
+        <div id="searchBox">
+            <a href="#" class="inLine"><i class="fab fa-twitter icon"></i></a>
+            <a href="" class="inLine"><i class="fab fa-facebook icon"></i></a>
+            <form id="search">   
+                <input type="text" placeholder="Search..." class="inLineSearch">
+                <button type="submit"><img src=""><i class="fas fa-search"></i></button>
+            </form>
+            <a href="#" class="inLine icon">Sign In</a>
+            <a href="#" class="inLine"><i class="fas fa-shopping-cart icon"></i></a>
+        </div>
+
+
     </div>
     <div class="header">
         <h2 class="block">Welcome!</h2>
